Use NodesBuilder in CypherNodeLoader